IVYPORTAL-5025: Various or urgent requests in S152 - Handle PO mail: fix style of calendar on Firefox

--- a/AxonIvyPortal/PortalStyle/webContent/resources/less/theme.less
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/less/theme.less
@@ -132,3 +132,8 @@ img[id*='additonalTaskUserAvatar'] {
 .stages-chain .current i {
   color: @menu-color;
 }
+
+/*Style for calendar*/
+div.ui-timepicker-div {
+	width: 199px;
+}
